# NodeFlowLLVM

./: .gitignore  .gitmodules  CMakeLists.txt  NODEFLOW-AOT.md  NodeFlowCore.cpp  NodeFlowCore.hpp  PLAN-LLVM.md  PLAN.md  README.md  STRATEGY-GenerationCounters.md  aot_host_template.cpp  demo.json  devicetrigger_addition.json  main.cpp
aot_examples/: demo2_step.cpp  demo2_step.h
docs/: NODEFLOW-AOT.md  STRATEGY.md  SUBROUTINES.md  TYPERULES.md
flows/: demo.json
web/: demo.html  generic.html  index.html
